--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,3 +35,12 @@ spring:
         hibernate:
             ddl-auto: update
             dialect: org.hibernate.dialect.H2Dialect
+##
+# Spring Security - OAuth2 Resource Server
+##
+    security:
+        oauth2:
+            resourceserver:
+                jwt:
+                    issuer-uri:  http://localhost:18080/auth/realms/minhas-figurinhas
+                    jwk-set-uri: http://localhost:18080/auth/realms/minhas-figurinhas/protocol/openid-connect/certs
